@@ -2,7 +2,7 @@ use 5.10.0;
 use Test::More;
 use Test::Pod::Coverage;
 
-my @modules = grep { $_ !~ /^Hailo::(?:Tokenizer|Storage|Engine)::/ } all_modules();
+my @modules = grep { $_ !~ /^Hailo::(?:Tokenizer|Storage|UI)::/ } all_modules();
 
 plan tests => scalar @modules;
 
